@@ -28,7 +28,7 @@
 
   <properties>
     <skip_maven_deploy>true</skip_maven_deploy>
-    <spring_version>5.3.37</spring_version>
+    <spring_version>5.3.39</spring_version>
   </properties>
 
   <dependencyManagement>
@@ -86,9 +86,6 @@
   <profiles>
     <profile>
       <id>jdk15ge-simple</id>
-      <activation>
-        <jdk>[15,</jdk>
-      </activation>
       <build>
         <plugins>
           <plugin>
@@ -97,10 +94,6 @@
             <configuration>
               <useSystemClassLoader>true</useSystemClassLoader>
               <forkCount>1</forkCount>
-              <argLine>${argline} ${jacocoArgLine}
-                                --add-opens java.base/java.lang=ALL-UNNAMED
-                                --add-opens java.base/java.math=ALL-UNNAMED
-                                --add-opens java.base/java.util=ALL-UNNAMED</argLine>
               <systemProperties>
                 <!-- common shared -->
               </systemProperties>
